--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<version>9.1.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.codeborne/phantomjsdriver -->
+		<dependency>
+			<groupId>com.codeborne</groupId>
+			<artifactId>phantomjsdriver</artifactId>
+			<version>1.4.4</version>
+		</dependency>
+
 
 
 
